--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,6 @@
 [submodule "sources/meta-fsl-arm"]
 	path = sources/meta-fsl-arm
 	url = git://git.yoctoproject.org/meta-fsl-arm
-[submodule "sources/meta-fsl-arm-extra"]
-	path = sources/meta-fsl-arm-extra
-	url = git://git.yoctoproject.org/meta-fsl-arm-extra
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
@@ -28,3 +25,7 @@
 [submodule "sources/poky"]
 	path = sources/poky
 	url = git://git.yoctoproject.org/poky
+[submodule "sources/meta-fsl-arm-extra"]
+	path = sources/meta-fsl-arm-extra
+	url = https://github.com/Freescale/meta-fsl-arm-extra.git
+	branch = daisy
