Configure for Docker

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+######################################################################
+# Yocto
+######################################################################
+
+._*
+.DS_Store
 .repo
+downloads
+sstate-cache
 
 # https://github.com/github/gitignore
 
