--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git://git.yoctoproject.org/meta-fsl-arm
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
-	url = git://git.openembedded.org/meta-openembedded
+	url = git://github.com/openembedded/meta-openembedded
 [submodule "sources/meta-smartphone"]
 	path = sources/meta-smartphone
 	url = git://github.com/shr-distribution/meta-smartphone.git
